--- a/css/all.css
+++ b/css/all.css
@@ -14,7 +14,8 @@ body {
 }
 
 img {
-    width: 20%;
+    max-width: 100%;
+    height: auto;
 }
 
 section {
@@ -38,11 +39,11 @@ section {
 
 /* 大頭照 */
 .photo-box {
-    width: 130px;
+    width: 160px;
     height: 160px;
     background: #e9ecef;
     border: 2px dashed #ccc;
-    border-radius: 8px;
+    border-radius: 50%;
     display: flex;
     /* flex-direction: column; */
     align-items: center;
