--- a/css/all.css
+++ b/css/all.css
@@ -39,8 +39,10 @@ section {
 
 /* 大頭照 */
 .photo-box {
-    width: 160px;
-    height: 160px;
+    width: 100%;
+    max-width: 150px;
+    /* height: 160px; */
+    aspect-ratio: 1 / 1;
     background: #e9ecef;
     border: 2px dashed #ccc;
     border-radius: 50%;
@@ -54,13 +56,17 @@ section {
 }
 
 .resume-photo {
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    max-width: 155px;
     object-fit: cover;
     border-radius: 50%;
     border: 1px solid #ddd;
+    aspect-ratio: 1 / 1;
 }
 
+.modal-dialog {
+    max-width: 100vw;
+}
 
 
 .required::after {
@@ -353,5 +359,11 @@ section {
 @media (min-width: 992px) {
     .preview-body {
         padding: 50px;
+    }
+}
+
+@media (min-width: 552px) {
+    .modal-dialog {
+        max-width: 80vw;
     }
 }
